# llvm-project

flang/tools/flang-tidy/: CMakeLists.txt  FlangTidy.cpp  FlangTidy.h  FlangTidyCheck.cpp  FlangTidyCheck.h  FlangTidyContext.h  FlangTidyForceLinker.h  FlangTidyModule.cpp  FlangTidyModule.h  FlangTidyModuleRegistry.h  FlangTidyOptions.cpp  FlangTidyOptions.h  MultiplexVisitor.h
flang/tools/flang-tidy/bugprone/: ArithmeticGotoCheck.cpp  ArithmeticGotoCheck.h  ArithmeticIfStmtCheck.cpp  ArithmeticIfStmtCheck.h  BugproneTidyModule.cpp  CMakeLists.txt  ContiguousArrayCheck.cpp  ContiguousArrayCheck.h  ImplicitDeclCheck.cpp  ImplicitDeclCheck.h  ImpliedSaveCheck.cpp  ImpliedSaveCheck.h  LogicalPrecedenceCheck.cpp  LogicalPrecedenceCheck.h  MismatchedIntentCheck.cpp  MismatchedIntentCheck.h  MissingActionCheck.cpp  MissingActionCheck.h  MissingDefaultCheck.cpp  MissingDefaultCheck.h  PointerTemporaryCheck.cpp  PointerTemporaryCheck.h  PrecisionLossCheck.cpp  PrecisionLossCheck.h  ShortCircuitCheck.cpp  ShortCircuitCheck.h  SubprogramTrampolineCheck.cpp  SubprogramTrampolineCheck.h  UndeclaredProcCheck.cpp  UndeclaredProcCheck.h  UninitializedVarCheck.cpp  UninitializedVarCheck.h  UnusedIntentCheck.cpp  UnusedIntentCheck.h
flang/tools/flang-tidy/misc/: MiscTidyModule.cpp  PureProcedureCheck.cpp  PureProcedureCheck.h  UnusedUseCheck.cpp  UnusedUseCheck.h
flang/tools/flang-tidy/modernize/: AvoidAssignStmt.cpp  AvoidAssignStmt.h  AvoidBackspaceStmt.cpp  AvoidBackspaceStmt.h  AvoidCommonBlocks.cpp  AvoidCommonBlocks.h  AvoidDataConstructs.cpp  AvoidDataConstructs.h  AvoidPauseStmt.cpp  AvoidPauseStmt.h  ModernizeTidyModule.cpp
flang/tools/flang-tidy/openmp/: AccumulatorRaceCheck.cpp  AccumulatorRaceCheck.h  OpenMPTidyModule.cpp
(+71 files in other folders)
